# nas-fast-cache

./: .gitignore  Cargo.toml  README.md
config/: local.ps1.example
docs/: performance-notes.md
scripts/: install-service.ps1  remove-service.ps1  start-nas-fast-cache.ps1  stop-nas-fast-cache.ps1
src/: cache.rs  lib.rs  main.rs  pathing.rs  winfsp_mount.rs
