[package]
name = "nas-fast-cache"
version = "0.1.0"
edition = "2024"
description = "Fast read-through local cache for NAS-backed Windows file paths."
build = "build.rs"

[lib]
name = "nas_cache"

[features]
default = ["mount"]
mount = ["dep:winfsp", "dep:winfsp-sys", "dep:windows"]

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dependencies.winfsp]
version = "0.13.0"
features = ["windows-61"]
optional = true

[dependencies.winfsp-sys]
version = "0.12"
optional = true

[dependencies.windows]
version = "0.61.1"
features = ["Win32_Foundation"]
optional = true

[build-dependencies]
winfsp = "0.13.0"

[dev-dependencies]
tempfile = "3.14"
